--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>1st Video Games</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- STYLE SHEETS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Chonburi&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="style.css">
+
         <!-- JAVASCRIPT -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </head>
@@ -16,7 +21,7 @@
         <!-- NAVIGATION -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">First Video Game</a>
+                <a class="navbar-brand" href="#">1st Video Game</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -35,34 +40,34 @@
                 </div>
             </div>
         </nav>
-    </body>
-           <!-- HERO SECTION-->
-           <div class="px-4 py-5 mb-5 text-center bg-light">
-            <h1 class="display-5 fw-bold">Centered hero</h1>
+
+        <!-- HERO SECTION-->
+        <div class="px-4 py-5 mb-5 text-center header">
+            <h1 class="display-5 fw-bold">The Cathode Ray Tube Amusement Device</h1>
             <div class="col-lg-6 mx-auto">
-              <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-              </div>
+                <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button" class="btn btn-dark btn-lg px-4 gap-3">Primary button</button>
+                </div>
             </div>
         </div>
-        <div class="Container"></div>
-        <div class="contaier-row"></div>
+
         <!-- THREE COLUMNS -->
        <div class="container text-center">
-        <div class="row">
-            <div class="col px-5 my-3">
-                <img src="img/placeholder.png" class="img-fluid rounded-circle mb-3 feature">
-                <h5>History</h5>
-            </div>
-            <div class="col px-5 my-3">
-                    <img src="img/placeholder.png" class="img-fluid rounded-circle mb-3 feature">
-                    <h5>creator(s)</h5>
-            </div>
-            <div class="col px-5 my-3">
-                <img src="img/placeholder.png" class="img-fluid rounded-circle mb-3 feature">
-                <h5>effect on Video Games as a whole</h5>
+            <div class="row">
+                <div class="col px-5 my-3">
+                    <img src="img/tube.png" class="img-fluid mb-3 feature">
+                    <h5>History</h5>
+                </div>
+                <div class="col px-5 my-3">
+                        <img src="img/gameplay.png" class="img-fluid mb-3 feature">
+                        <h5>Gameplay</h5>
+                </div>
+                <div class="col px-5 my-3">
+                    <img src="img/Evolution.png"></i>
+                    <h5>Effect on Video Games as a Whole</h5>
+                </div>
             </div>
         </div>
-    </div>
+    </body>
 </html>
