--- a/index.html
+++ b/index.html
@@ -74,5 +74,15 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>Citations</h2>
+                    <ul>
+                        <li>Donovan, Tristan (April 20, 2010). Replay: The History of Video Games. Yellow Ant. ISBN 978-0-9565072-0-4.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
