--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
                     <h2>Citations</h2>
                     <ul>
                         <li>Donovan, Tristan (April 20, 2010). Replay: The History of Video Games. Yellow Ant. ISBN 978-0-9565072-0-4.</li>
+                        <li>Kowert, Rachel; Quandt, Thorsten (August 27, 2015). The Video Game Debate: Unravelling the Physical, Social, and Psychological Effects of Video Games. Routledge. ISBN 978-1-138-83163-6.
+                        </li>
+                        <li>Smith, Alexander (November 27, 2019). They Create Worlds: The Story of the People and Companies That Shaped the Video Game Industry. 1: 1971 – 1982. CRC Press. ISBN 978-1-138-38990-8.
+                        </li>
+                        <li>Wolf, Mark J. P. (June 5, 2012). Before the Crash: Early Video Game History. Wayne State University Press. ISBN 978-0-8143-3450-8.
+                        </li>
+                        <li>Wolf, Mark J. P. (August 16, 2012). Encyclopedia of Video Games: The Culture, Technology, and Art of Gaming, Volume 1. Greenwood Publishing Group. ISBN 978-0-313-37936-9.
+                        </li>
                     </ul>
                 </div>
             </div>
