--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                         </li>
                         <li>Wolf, Mark J. P. (August 16, 2012). Encyclopedia of Video Games: The Culture, Technology, and Art of Gaming, Volume 1. Greenwood Publishing Group. ISBN 978-0-313-37936-9.
                         </li>
+                        <li>https://youtu.be/uHQ4WCU1WQc The First Video Game by Ahoy
+                        </li>
                     </ul>
                 </div>
             </div>
