--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
         <!-- NAVIGATION -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">1st Video Game</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="#">1st Video Game</a>              
                 <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -48,12 +46,13 @@
                 <p class="lead mb-4" class="lh-lg">The cathode-ray tube amusement device is the earliest known interactive electronic game and the first game to incorporate an electronic display. The device simulates an artillery shell arcing towards targets on a cathode-ray tube (CRT) screen, which is controlled by the player by adjusting knobs to change the trajectory of a CRT beam spot on the display in order to reach plastic targets overlaid on the screen. Thomas T. Goldsmith Jr. and Estle Ray Mann constructed the game from analog electronics and filed for a patent in 1947, which was issued the following year. The gaming device was never manufactured or marketed to the public, so it had no effect on the future of the video game industry which at that time would not exist until 1951. Under many definitions, the device is not considered a video game, though it had an electronic display it did not run on a computing device. Therefore, despite its relevance to the early history of video games, it is not generally considered a candidate for the title of the first video game. But It should be seen as a starting point for people to maybe get an idea of a video game.
                 </p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-dark btn-lg px-4 gap-3">Primary button</button>
+               
                 </div>
             </div>
         </div>
 
-        <!-- THREE COLUMNS -->
+    <!-- THREE COLUMNS -->
+    <div class="darker py-5">
        <div class="container text-center teaser">
             <div class="row">
                 <div class="col px-5 my-3">
@@ -69,30 +68,33 @@
                 </div>
                 <div class="col px-5 my-3">
                     <img src="img/Evolution.png"></i>
+
                     <h5 class="lh-lg">Legacy</h5>
                     <p class="lh-lg" class="text-start">Despite being a game that used a graphical display, the cathode-ray tube amusement device is generally not considered under many definitions to be a candidate for the first video game, as it used purely analog hardware and did not run on a computing device; some loose definitions may still consider it a video game, but it is still usually disqualified as the device was never manufactured (though it can be seen as the grandfather of video games since it shows that an idea of early video games was in the mind of people ever since the late 1940s). Nevertheless, it is the earliest known interactive electronic game to incorporate an electronic display, as no prior games, such as the 1936 Seeburg Ray-O-Lite, had such a display or primarily used electronic components—ones which modify an electrical signal, rather than simply using electricity as power. This makes the cathode-ray tube amusement device a forerunner to other games in the early history of video games. As the device was never manufactured or widely shown it did not directly inspire any other games and had no impact on the future video game industry.The patent itself was not discovered again until 2002, when David Winter, a French electronics collector, while searching for evidence of early prototypes of the 1972 Magnavox Odyssey console found it in a set of documents in an archival warehouse originally compiled for a 1974 lawsuit by Magnavox against several arcade game companies.</p>
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h2>Citations</h2>
-                    <ul>
-                        <li>Donovan, Tristan (April 20, 2010). Replay: The History of Video Games. Yellow Ant. ISBN 978-0-9565072-0-4.</li>
-                        <li>Kowert, Rachel; Quandt, Thorsten (August 27, 2015). The Video Game Debate: Unravelling the Physical, Social, and Psychological Effects of Video Games. Routledge. ISBN 978-1-138-83163-6.
-                        </li>
-                        <li>Smith, Alexander (November 27, 2019). They Create Worlds: The Story of the People and Companies That Shaped the Video Game Industry. 1: 1971 – 1982. CRC Press. ISBN 978-1-138-38990-8.
-                        </li>
-                        <li>Wolf, Mark J. P. (June 5, 2012). Before the Crash: Early Video Game History. Wayne State University Press. ISBN 978-0-8143-3450-8.
-                        </li>
-                        <li>Wolf, Mark J. P. (August 16, 2012). Encyclopedia of Video Games: The Culture, Technology, and Art of Gaming, Volume 1. Greenwood Publishing Group. ISBN 978-0-313-37936-9.
-                        </li>
-                        <li>https://youtu.be/uHQ4WCU1WQc The First Video Game by Ahoy
-                        </li>
-                    </ul>
-                </div>
+    </div>
+
+    <div class="container py-5">
+        <div class="row">
+            <div class="col">
+                <h2>Citations</h2>
+                <ul>
+                    <li>Donovan, Tristan (April 20, 2010).<a href="https://www.amazon.com/Replay-History-Video-Tristan-Donovan-ebook/dp/B003VRZH2U">Replay: The History of Video Games.</a> Yellow Ant. ISBN 978-0-9565072-0-4.</li>
+                    <li>Kowert, Rachel; Quandt, Thorsten (August 27, 2015).<a href="https://books.google.com/books/about/The_Video_Game_Debate.html?id=Y-JzCgAAQBAJ">The Video Game Debate: Unravelling the Physical, Social, and Psychological Effects of Video Games.</a> Routledge. ISBN 978-1-138-83163-6.
+                    </li>
+                    <li>Smith, Alexander (November 27, 2019). <a href="https://www.amazon.com/They-Create-Worlds-Alexander-Smith/dp/1138389900">They Create Worlds: The Story of the People and Companies That Shaped the Video Game Industry.</a> 1: 1971 – 1982. CRC Press. ISBN 978-1-138-38990-8.
+                    </li>
+                    <li>Wolf, Mark J. P. (June 5, 2012). <a href="https://www.amazon.com/Before-Crash-History-Contemporary-Approaches/dp/0814334504">Before the Crash: Early Video Game History.</a> Wayne State University Press. ISBN 978-0-8143-3450-8.
+                    </li>
+                    <li>Wolf, Mark J. P. (August 16, 2012). <a href="https://www.amazon.com/Encyclopedia-Video-Games-Culture-Technology-ebook/dp/B009OHRTIG">Encyclopedia of Video Games: The Culture, Technology, and Art of Gaming, Volume 1.</a> Greenwood Publishing Group. ISBN 978-0-313-37936-9.
+                    </li>
+                    <li><a href="https://youtu.be/uHQ4WCU1WQc">The First Video Game.</a> by Ahoy
+                    </li>
+                </ul>
             </div>
         </div>
+    </div>
     </body>
 </html>
