--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <!-- HERO SECTION-->
         <div class="px-4 py-5 mb-5 text-center header">
-            <h1 class="display-5 fw-bold">The Cathode Ray Tube Amusement Device</h1>
+            <h1 class="display-5 fw-bold"><u>The Cathode Ray Tube Amusement Device</u></h1>
             <div class="col-lg-6 mx-auto">
                 <p class="lead mb-4" class="lh-lg">The cathode-ray tube amusement device is the earliest known interactive electronic game and the first game to incorporate an electronic display. The device simulates an artillery shell arcing towards targets on a cathode-ray tube (CRT) screen, which is controlled by the player by adjusting knobs to change the trajectory of a CRT beam spot on the display in order to reach plastic targets overlaid on the screen. Thomas T. Goldsmith Jr. and Estle Ray Mann constructed the game from analog electronics and filed for a patent in 1947, which was issued the following year. The gaming device was never manufactured or marketed to the public, so it had no effect on the future of the video game industry which at that time would not exist until 1951. Under many definitions, the device is not considered a video game, though it had an electronic display it did not run on a computing device. Therefore, despite its relevance to the early history of video games, it is not generally considered a candidate for the title of the first video game. But It should be seen as a starting point for people to maybe get an idea of a video game.
                 </p>
