--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                     </li>
                     <li><a href="https://youtu.be/uHQ4WCU1WQc">The First Video Game.</a> by Ahoy
                     </li>
+                    <li><a href="https://youtu.be/k_WUb-1C010">CRT Gameplay</a> By Old Classic Retro Gaming
                 </ul>
             </div>
         </div>
