--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="#">Link</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#bottom section">About</a>
+                            <a class="nav-link" href="#Citations">About</a>
                         </li>
                     </ul>
                 </div>
