--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container py-5">
         <div class="row">
             <div class="col">
-                <h2>Citations</h2>
+                <h2 id="Citations">Citations</h2>
                 <ul>
                     <li>Donovan, Tristan (April 20, 2010).<a href="https://www.amazon.com/Replay-History-Video-Tristan-Donovan-ebook/dp/B003VRZH2U">Replay: The History of Video Games.</a> Yellow Ant. ISBN 978-0-9565072-0-4.</li>
                     <li>Kowert, Rachel; Quandt, Thorsten (August 27, 2015).<a href="https://books.google.com/books/about/The_Video_Game_Debate.html?id=Y-JzCgAAQBAJ">The Video Game Debate: Unravelling the Physical, Social, and Psychological Effects of Video Games.</a> Routledge. ISBN 978-1-138-83163-6.
