--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         <a class="nav-link" aria-current="page" href="#top">Home</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#Citations">Link</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Citations">About</a>
+                            <a class="nav-link" href="#middle">About</a>
                         </li>
                     </ul>
                 </div>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col px-5 my-3">
                         <img src="img/gameplay.png" class="img-fluid mb-3 feature">
-                        <h5 class="lh-lg">Gameplay</h5>
+                        <h5 class="lh-lg" id="middle">Gameplay</h5>
                         <p class="lh-lg" class="text-start">The cathode-ray tube amusement device is made of a cathode-ray tube (CRT) connected to basic oscilloscope type circuitry with a set of knobs and switches. The device also incorporates very simple analog circuitry and doesn't use any digital computer or memory device or execute a program. The CRT projects a spot on the display screen, which traces a curved arc across the screen when a switch is activated by the player. This beam spot represents the trajectory of an artillery shell. The curved path is produced by the CRT, which isn’t of conventional design, deflecting the beam of electrons as the spot moves across the screen. Overlaid on the screen are transparent plastic targets representing objects such as airplanes which can be seen as early enemies. At the end of the spot's trajectory, the beam defocuses, resulting in the spot expanding and blurring. This represents the shell exploding as if detonated by a time fuze. The goal of the game is to have the beam defocus when it is within the bounds of a target. Prior to the beam spot beginning its arc, the player can turn the control knobs to direct the beam spot's trajectory and adjust the delay of the shell burst. The machine can be set to fire a "shell" either once or at a regular interval, which is adjustable by the player. This gives the player the goal of hitting one of the overlay targets with the shell burst within a time limit. The player was recommended to make the trajectory far removed from a straight line "so as to require an increased amount of skill and care". It basically is like trying to fire and detonate bombs onto enimies</p>
                 </div>
                 <div class="col px-5 my-3">
