--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
                     <li><a href="https://youtu.be/uHQ4WCU1WQc">The First Video Game.</a> by Ahoy
                     </li>
                     <li><a href="https://youtu.be/k_WUb-1C010">CRT Gameplay</a> By Old Classic Retro Gaming
+                    <li>my essential quesgtions are:
+                        <ul>
+                        <li>What is the history of the CRT amusment device?</li>
+                        <li>How do you play the CRT amusment device?</li>
+                        <li>What is the legacy of the CRT amusment device todaY?</li>
+                        <ul>
+                    </li>
                 </ul>
             </div>
         </div>
