--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
   <!-- NAVIGATION -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">The first Electonic Game</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse row" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#top">Home</a>
+                <a class="nav-link col-sm" aria-current="page" href="#top">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#Citations">Link</a>
+                <a class="nav-link col-sm" href="#Citations">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#middle">About</a>
+                    <a class="nav-link col-sm" href="#middle">About</a>
                 </li>
             </ul>
         </div>
@@ -49,21 +49,29 @@
             <div class="col-lg-6 mx-auto">
                 <p class="lead mb-4" class="lh-lg">The cathode-ray tube amusement device is the earliest known interactive electronic game and the first game to incorporate an electronic display. The device simulates an artillery shell arcing towards targets on a cathode-ray tube (CRT) screen, which is controlled by the player by adjusting knobs to change the trajectory of a CRT beam spot on the display in order to reach plastic targets overlaid on the screen. Thomas T. Goldsmith Jr. and Estle Ray Mann constructed the game from analog electronics and filed for a patent in 1947, which was issued the following year. The gaming device was never manufactured or marketed to the public, so it had no effect on the future of the video game industry which at that time would not exist until 1951. Under many definitions, the device is not considered a video game, though it had an electronic display it did not run on a computing device. Therefore, despite its relevance to the early history of video games, it is not generally considered a candidate for the title of the first video game. But It should be seen as a starting point for people to maybe get an idea of a video game.
                 </p>
-                <li>my essential quesgtions are:
-                    <ul>
-                    <li>What is the history of the CRT amusment device?</li>
-                    <li>How do you play the CRT amusment device?</li>
-                    <li>What is the legacy of the CRT amusment device todaY?</li>
-                    <ul>
-                </li>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                
                 </div>
             </div>
         </div>
 
+
+        <div class="darker">
+            <div class="container">
+                <!-- ESSENTIAL QUESTIONS-->
+                <li class="darker py-5">my essential quesgtions are:
+                    <ul>
+                    <li>What is the history of the CRT amusment device?</li>
+                    <li>How do you play the CRT amusment device?</li>
+                    <li>What is the legacy of the CRT amusment device today?</li>
+                    <ul>
+                </li>
+                <li>I conducted my resarch by reviewing books, watching documentaries and gameplay, and reading articles that all talk about early video game history via youtube, amazon, kindle, and just reading physical copies of books I found online
+                </li>
+            </div>
+        </div>
     <!-- THREE COLUMNS -->
-    <div class="darker py-5">
+    <div class="lighter">
        <div class="container text-center teaser">
             <div class="row">
                 <div class="col px-5 my-3">
@@ -76,7 +84,7 @@
                 <div class="col px-5 my-3">
                         <img src="img/gameplay.png" class="img-fluid mb-3 feature">
                         <h5 class="lh-lg" id="middle">Gameplay</h5>
-                        <p class="lh-lg" class="text-start">The cathode-ray tube amusement device is made of a cathode-ray tube (CRT) connected to basic oscilloscope type circuitry with a set of knobs and switches. The device also incorporates very simple analog circuitry and doesn't use any digital computer or memory device or execute a program. The CRT projects a spot on the display screen, which traces a curved arc across the screen when a switch is activated by the player. This beam spot represents the trajectory of an artillery shell. The curved path is produced by the CRT, which isn’t of conventional design, deflecting the beam of electrons as the spot moves across the screen. Overlaid on the screen are transparent plastic targets representing objects such as airplanes which can be seen as early enemies. At the end of the spot's trajectory, the beam defocuses, resulting in the spot expanding and blurring. This represents the shell exploding as if detonated by a time fuze. The goal of the game is to have the beam defocus when it is within the bounds of a target. Prior to the beam spot beginning its arc, the player can turn the control knobs to direct the beam spot's trajectory and adjust the delay of the shell burst. The machine can be set to fire a "shell" either once or at a regular interval, which is adjustable by the player. This gives the player the goal of hitting one of the overlay targets with the shell burst within a time limit. The player was recommended to make the trajectory far removed from a straight line "so as to require an increased amount of skill and care". It basically is like trying to fire and detonate bombs onto enimies</p>
+                        <p class="lh-lg" class="text-start">The cathode-ray tube amusement device is made of a cathode-ray tube (CRT) connected to basic oscilloscope type circuitry with a set of knobs and switches. The device also incorporates very simple analog circuitry and doesn't use any digital computer or memory device or execute a program. The CRT projects a spot on the display screen, which traces a curved arc across the screen when a switch is activated by the player. This beam spot represents the trajectory of an artillery shell. The curved path is produced by the CRT, which isn’t of conventional design, deflecting the beam of electrons as the spot moves across the screen. Overlaid on the screen are transparent plastic targets representing objects such as airplanes which can be seen as early enemies. At the end of the spot's trajectory, the beam defocuses, resulting in the spot expanding and blurring. This represents the shell exploding as if detonated by a time fuze. The goal of the game is to have the beam defocus when it is within the bounds of a target. Prior to the beam spot beginning its arc, the player can turn the control knobs to direct the beam spot's trajectory and adjust the delay of the shell burst. The machine can be set to fire a "shell" either once or at a regular interval, which is adjustable by the player. This gives the player the goal of hitting one of the overlay targets with the shell burst within a time limit. The player was recommended to make the trajectory far removed from a straight line "so as to require an increased amount of skill and care". It basically is like trying to fire and detonate bombs onto enemies</p>
                 </div>
                 <div class="col px-5 my-3">
                     <img src="img/Evolution.png"></i>
@@ -87,10 +95,13 @@
             </div>
         </div>
     </div>
-
-    <div class="container py-5">
+  <div class="darker">
+    <div class="container  py-5">
         <div class="row">
             <div class="col">
+                <li><a href="https://youtu.be/k_WUb-1C010">This video shows a simultaion of what its like to play the CRT amusment device</a> By Old Classic Retro Gaming
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/k_WUb-1C010" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
                 <h2 id="Citations">Citations</h2>
                 <ul>
                     <li>Donovan, Tristan (April 20, 2010).<a href="https://www.amazon.com/Replay-History-Video-Tristan-Donovan-ebook/dp/B003VRZH2U">Replay: The History of Video Games.</a> Yellow Ant. ISBN 978-0-9565072-0-4.</li>
@@ -104,11 +115,10 @@
                     </li>
                     <li><a href="https://youtu.be/uHQ4WCU1WQc">The First Video Game.</a> by Ahoy
                     </li>
-                    <li><a href="https://youtu.be/k_WUb-1C010">CRT Gameplay</a> By Old Classic Retro Gaming
-                    
                 </ul>
             </div>
         </div>
+    </div>
     </div>
     </body>
 </html>
